
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.0-beta-1 ($LastChangedRevision$, $LastChangedDate$)
====================================
- Updated xPDO to revision 333.
- Fix issues with Page settings defaulting to 1 on resource creation
- Adjusted order of JS utils loading to make for easier min-concat loading
- Cleanups to JS to prepare for beta-1
- Lexicon updates
- Updating outdated copyright notices in source code headers.
- Fixed hardcoded version number in setup.
- Added request_controller system setting to indicate the front-controller file (default=index.php).
- Fixed array_merge warnings in modLexicon.
- Added back support for anonymous user access control.
- Added support for returnUrl parameter to be sent to login processor to allow unauthorized responses to return to the original requested page directly (NOTE: this overrides manager_login_startup and login_startup parameters, but does not work with POST requests: these will simply return to the URL with only GET parameters).
- Export lexicon now prompts for download of exported file
- Enhanced User Group update/create screen to now have grids that allow you to assign Resource Group / Context permissions to that user group. This will help clear up confusion with the access relationships.
- Fixed scope issue in accordion.css that was causing odd behaviours with panels in the main content
- Adjusted setup procedures to allow for more lexicon support for pre-load checks
- Adjusted setup lexicon to allow for multiple topics; conformed upgrade scripts and other references to match
- Consolidated similar code in setup, esp. with regards to fatal errors
- Added smarter checks for xPDO failures in connectors
- [#MODX-744] Fixed issue with invalid display of num cleared on cache claering
- Fixed bugs with updating packages from a remote provider